crates/fec-cli/src/commands/export/sqlite/snapshots/libfec__commands__export__sqlite__test__tests__F1S 8.5 data.snap
---
source: crates/fec-cli/src/commands/export/sqlite/test.rs
expression: "query(&db, \"select * from libfec_F1S where filing_id = '1923816'\")"
snapshot_kind: text
---
filing_id | form_type | filer_committee_id_number | joint_fund_participant_committee_name | joint_fund_participant_committee_id_number | joint_fund_participant_committee_type | affiliated_committee_id_number | affiliated_committee_name | affiliated_candidate_id_number | affiliated_last_name | affiliated_first_name | affiliated_middle_name | affiliated_prefix | affiliated_suffix | affiliated_street_1 | affiliated_street_2 | affiliated_city | affiliated_state | affiliated_zip_code | affiliated_relationship_code | agent_last_name | agent_first_name | agent_middle_name | agent_prefix | agent_suffix | agent_street_1 | agent_street_2 | agent_city | agent_state | agent_zip_code | agent_title | agent_telephone | bank_name | bank_street_1 | bank_street_2 | bank_city | bank_state | bank_zip_code
==== Row 0 ====
[filing_id]:1923816
[form_type]:F1S
[filer_committee_id_number]:C00925099
[joint_fund_participant_committee_name]:Dodo Committee
[joint_fund_participant_committee_id_number]:C00853135
[joint_fund_participant_committee_type]:P
[affiliated_committee_id_number]:
[affiliated_committee_name]:
[affiliated_candidate_id_number]:
[affiliated_last_name]:
[affiliated_first_name]:
[affiliated_middle_name]:
[affiliated_prefix]:
[affiliated_suffix]:
[affiliated_street_1]:
[affiliated_street_2]:
[affiliated_city]:
[affiliated_state]:
[affiliated_zip_code]:
[affiliated_relationship_code]:
[agent_last_name]:
[agent_first_name]:
[agent_middle_name]:
[agent_prefix]:
[agent_suffix]:
[agent_street_1]:
[agent_street_2]:
[agent_city]:
[agent_state]:
[agent_zip_code]:
[agent_title]:
[agent_telephone]:
[bank_name]:
[bank_street_1]:
[bank_street_2]:
[bank_city]:
[bank_state]:
[bank_zip_code]:
==== Row 1 ====
[filing_id]:1923816
[form_type]:F1S
[filer_committee_id_number]:C00925099
[joint_fund_participant_committee_name]:Dodo Congress and lobbying committee
[joint_fund_participant_committee_id_number]:C00925065
[joint_fund_participant_committee_type]:N
[affiliated_committee_id_number]:
[affiliated_committee_name]:
[affiliated_candidate_id_number]:
[affiliated_last_name]:
[affiliated_first_name]:
[affiliated_middle_name]:
[affiliated_prefix]:
[affiliated_suffix]:
[affiliated_street_1]:
[affiliated_street_2]:
[affiliated_city]:
[affiliated_state]:
[affiliated_zip_code]:
[affiliated_relationship_code]:
[agent_last_name]:
[agent_first_name]:
[agent_middle_name]:
[agent_prefix]:
[agent_suffix]:
[agent_street_1]:
[agent_street_2]:
[agent_city]:
[agent_state]:
[agent_zip_code]:
[agent_title]:
[agent_telephone]:
[bank_name]:
[bank_street_1]:
[bank_street_2]:
[bank_city]:
[bank_state]:
[bank_zip_code]:
==== Row 2 ====
[filing_id]:1923816
[form_type]:F1S
[filer_committee_id_number]:C00925099
[joint_fund_participant_committee_name]:Dodo Commonwealth PAC
[joint_fund_participant_committee_id_number]:C00925073
[joint_fund_participant_committee_type]:N
[affiliated_committee_id_number]:
[affiliated_committee_name]:
[affiliated_candidate_id_number]:
[affiliated_last_name]:
[affiliated_first_name]:
[affiliated_middle_name]:
[affiliated_prefix]:
[affiliated_suffix]:
[affiliated_street_1]:
[affiliated_street_2]:
[affiliated_city]:
[affiliated_state]:
[affiliated_zip_code]:
[affiliated_relationship_code]:
[agent_last_name]:
[agent_first_name]:
[agent_middle_name]:
[agent_prefix]:
[agent_suffix]:
[agent_street_1]:
[agent_street_2]:
[agent_city]:
[agent_state]:
[agent_zip_code]:
[agent_title]:
[agent_telephone]:
[bank_name]:
[bank_street_1]:
[bank_street_2]:
[bank_city]:
[bank_state]:
[bank_zip_code]:
