crates/fec-cli/src/commands/export/sqlite/snapshots/libfec__commands__export__sqlite__test__tests__basic_f99-2.snap
---
source: crates/fec-cli/src/commands/export/sqlite/test.rs
expression: "query(&db, \"select count(*) from libfec_f99\")"
snapshot_kind: text
---
count(*)
==== Row 0 ====
[count(*)]:1
