crates/fec-cli/src/commands/export/sqlite/snapshots/libfec__commands__export__sqlite__test__tests__basic_f99.snap
---
source: crates/fec-cli/src/commands/export/sqlite/test.rs
expression: "query(&db, \"select name, sql from sqlite_master where type='table'\")"
snapshot_kind: text
---
name | sql
==== Row 0 ====
[name]:libfec_filings
[sql]:CREATE TABLE libfec_filings(
    /**
     * 
     * 
     */

    --- Unique numeric identifier for this filing, assigned by the FEC, ex 1884420
    filing_id TEXT PRIMARY KEY NOT NULL,
    
    --- Version of the FEC filing format, ex '8.4'
    fec_version TEXT NOT NULL,
    
    --- Name of the software that produced this filing, ex 'NetFile'
    software_name TEXT NOT NULL,

    --- Version of the software that produced this filing, ex '2022451'
    software_version TEXT NOT NULL,

    --- If this filing is an amendment, the report_id of the original filing, otherwise null. ex 1884419
    report_id TEXT,

    --- Sequential number of amendments
    report_number TEXT,

    --- Any header comments provided by the filer
    comment TEXT,

    --- Form type of the cover record, ex 'F3'
    cover_record_form TEXT NOT NULL,
    cover_record_form_amendment_indicator TEXT,

    filer_id TEXT NOT NULL,
    filer_name TEXT NOT NULL,
    report_code TEXT,
    coverage_from_date TEXT,
    coverage_through_date TEXT,

    --- How the filing's header is written: 'hdr' (electronic 3.x and later), 'legacy_block' (electronic 1.x/2.x `/* Header` block), or 'paper' (FEC data entry of a paper filing)
    header_style TEXT,

    --- Paper filings: the FEC data-entry batch number
    batch_number TEXT,

    --- Paper filings (P2.6 and later): date the FEC received the paper filing, as written
    received_date TEXT
  )
==== Row 1 ====
[name]:libfec_F99
[sql]:CREATE TABLE [libfec_F99](
  filing_id text references libfec_filings(filing_id),
  form_type text,
  filer_committee_id_number text,
  committee_name text,
  street_1 text,
  street_2 text,
  city text,
  state text,
  zip_code text,
  treasurer_last_name text,
  treasurer_first_name text,
  treasurer_middle_name text,
  treasurer_prefix text,
  treasurer_suffix text,
  date_signed date,
  text_code text,
  filing_frequency text,
  pdf_attachment text,
  text text
)
