crates/fec-cli/src/commands/export/sqlite/snapshots/libfec__commands__export__sqlite__test__tests__legacy families row counts.snap
---
source: crates/fec-cli/src/commands/export/sqlite/test.rs
expression: counts
snapshot_kind: text
---
libfec_F3 391955 1
libfec_F3 497 1
libfec_F3 716051 1
libfec_F3P 10665 1
libfec_F3S 391955 1
libfec_F3S 716051 1
libfec_F3X 102196 1
libfec_F3X 1215766 1
libfec_F3X 13801 1
libfec_F3X 236480 1
libfec_F3X 342096 1
libfec_F3X 730663 1
libfec_F7 1081726 1
libfec_F76 1081726 2
libfec_F99 300707 1
libfec_H1 1215766 1
libfec_H1 13801 1
libfec_H1 236480 1
libfec_H2 1215766 2
libfec_H2 13801 2
libfec_H2 236480 1
libfec_H2 342096 1
libfec_H2 730663 2
libfec_H3 13801 2
libfec_H3 236480 1
libfec_H3 342096 2
libfec_H3 730663 2
libfec_H4 102196 2
libfec_H4 1215766 1
libfec_H4 13801 2
libfec_H4 236480 2
libfec_H4 342096 2
libfec_H4 730663 2
libfec_H5 730663 2
libfec_H6 730663 2
libfec_SI 13801 2
libfec_SL 1215766 1
libfec_SL 730663 2
libfec_TEXT 102196 2
libfec_TEXT 342096 1
libfec_TEXT 730663 2
libfec_filings 102196 1
libfec_filings 10665 1
libfec_filings 1081726 1
libfec_filings 1215766 1
libfec_filings 13801 1
libfec_filings 236480 1
libfec_filings 300707 1
libfec_filings 342096 1
libfec_filings 391955 1
libfec_filings 497 1
libfec_filings 716051 1
libfec_filings 730663 1
libfec_schedule_a 102196 5
libfec_schedule_a 10665 4
libfec_schedule_a 1215766 3
libfec_schedule_a 13801 6
libfec_schedule_a 236480 3
libfec_schedule_a 342096 6
libfec_schedule_a 391955 6
libfec_schedule_a 497 7
libfec_schedule_a 716051 12
libfec_schedule_a 730663 14
libfec_schedule_b 102196 2
libfec_schedule_b 10665 4
libfec_schedule_b 1215766 2
libfec_schedule_b 13801 15
libfec_schedule_b 236480 1
libfec_schedule_b 342096 7
libfec_schedule_b 391955 3
libfec_schedule_b 497 3
libfec_schedule_b 716051 6
libfec_schedule_b 730663 7
libfec_schedule_c 102196 2
libfec_schedule_c 1215766 1
libfec_schedule_c 13801 1
libfec_schedule_c 342096 1
libfec_schedule_c 391955 2
libfec_schedule_c 497 1
libfec_schedule_c1 391955 1
libfec_schedule_d 102196 2
libfec_schedule_d 10665 2
libfec_schedule_d 1215766 1
libfec_schedule_d 13801 2
libfec_schedule_d 342096 2
libfec_schedule_d 391955 4
libfec_schedule_d 497 2
libfec_schedule_d 716051 1
libfec_schedule_d 730663 2
libfec_schedule_e 1215766 2
